--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <title>Client</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body style="margin:0">
   <app-root>Loading...</app-root>
 </body>
 </html>
