--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,14 +1,17 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Client</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<meta charset="utf-8">
+	<title>Client</title>
+	<base href="/">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+	<app-root>
+		<md-progress-bar mode="indeterminate"></md-progress-bar>
+	</app-root>
 </body>
 </html>
